--- a/DragonsCode/me/templates/me/base.html
+++ b/DragonsCode/me/templates/me/base.html
@@ -8,6 +8,7 @@
         <title>{% block title %}{% endblock %}</title>
 
         <link rel="stylesheet" href="{% static 'me/main.css' %}">
+        <link rel="stylesheet" href="{% static 'me/komi.css' %}">
     </head>
 
     <body>
